theme-park-ride-ops-3/k8s/service3-deployment.yaml
k8s/service3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3
  namespace: themepark-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
      - name: service3
        image: ${REGISTRY_URL}/service3:${IMAGE_TAG}
        ports:
        - containerPort: 8080
      imagePullPolicy: Always
